Test Org - Speridian/src/objects/Ba_Billing_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Ba_Address1__c</fullName>
        <label>Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ba_Address2__c</fullName>
        <label>Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ba_Bill_Cycle__c</fullName>
        <label>Bill Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ba_Bill_Method__c</fullName>
        <label>Bill Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ba_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ba_Group__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Profile</relationshipLabel>
        <relationshipName>Billing_Profile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ba_State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ba_ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Billing Profile</label>
    <nameField>
        <label>Billing Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>